增加鼠标悬停时文字右移效果

--- a/css/leftbar.css
+++ b/css/leftbar.css
@@ -30,10 +30,12 @@
     display: block;
     padding-bottom: 15px;
     color: black;
+    transition: transform 0.7s ease;
 }
 
 .leftbar a:hover {
-    background-color: #ddd;
+    /* background-color: #ddd; */
+    transform: translateX(10px);
 }
 
 .leftbar p {
